# Stellar-Veriphy

./: .dockerignore  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION.md  Makefile  STYLE-GUIDE.md  deploy.sh  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: BADGE.md  CI_QUICK_REFERENCE.md  DOCKER_QUICK_REFERENCE.md  GIT_HOOKS_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  TROUBLESHOOTING.md
.github/workflows/: README.md  ci.yml
.husky/: README.md  pre-push
contracts/oracle/: Cargo.toml
contracts/oracle/src/: lib.rs
contracts/provenance/: Cargo.toml  DEPLOYMENT.md
contracts/provenance/src/: lib.rs  test.rs
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs
docs/: registry_events.md  verification_pipeline.md
frontend/: .env.local.example  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/context/: ThemeContext.tsx  ToastContext.tsx  WizardContext.tsx
frontend/app/report-issue/: page.tsx
frontend/app/skeleton-demo/: page.tsx
frontend/components/: About.tsx  CallToAction.tsx  Ecosystem.tsx  Header.tsx  HeroSection.tsx  HowItWorks.tsx  ThemeProvider.tsx  ToastProvider.tsx  TransactionTracker.tsx  WalletModal.tsx  WalletProvider.tsx
frontend/config/: network.ts
frontend/context/: WalletContext.tsx  WizardContext.tsx
frontend/services/: manifestUseCases.ts  wallet.ts
frontend/utils/: hashing.ts  manifestConverter.ts  manifestValidation.ts  transaction.ts  validation.ts
(+42 files in other folders)
